--- a/src/app/pokemon-card/pokemon-card.component.sass
+++ b/src/app/pokemon-card/pokemon-card.component.sass
@@ -1,27 +1,23 @@
+$red: #ff0000
+
 .pokemon-card
   display: flex
   flex-direction: column
   font-family: "Signika", arial, sans-serif
-  margin: 0 5px 50px
-  width: 215px
-  
+  border: 1px solid $red
+  border-radius: 5px
+  box-shadow: 0 0 1px 2px $red
+  cursor: pointer
 
   &__image
     background: #F2F2F2
 
-  &__number,
-  &__name
-    padding: 0 10px
-
   &__number
     color: #919191
     font-size: 80%
-    padding-top: 2px
 
   &__name
     color: #313131
-    font-size: 145%
-    margin: 0.5em 0 5px
     text-transform: capitalize
 
   &__types
