--- a/src/app/pokemons/pokemons.component.sass
+++ b/src/app/pokemons/pokemons.component.sass
@@ -206,6 +206,14 @@
         background-color: #4592c4
         color: #fff
 
+#pokemonImage
+    width: 25em
+    img
+        width: 25em
+
+span
+    text-transform: capitalize
+
 \:host
     display: flex
     flex-wrap: wrap
