--- a/src/app/pokemon-card/pokemon-card.component.html
+++ b/src/app/pokemon-card/pokemon-card.component.html
@@ -1,24 +1,16 @@
-<div class="pokemon-card" *ngIf="pokemon">
+<div class="pokemon-card mb-3 mx-3 p-3" *ngIf="pokemon" (click)="selectPokemon()">
   <div class="pokemon-card__image">
-    <!--    <img-->
-    <!--      [src]="pokemon.image"-->
-    <!--      alt="Pokemon Image">-->
-
-    <img [src]="getPokemonImage(pokemon)" alt="Pokemon Image">
+    <img [src]="pokemon?.imageUrl" alt="Pokemon Image">
   </div>
-
   <div class="pokemon-card__number">
-    Nº {{ getPokemonNumber(pokemon) }}
+    <label>Nº {{ pokemon?.id }}</label>
   </div>
-
-  <div class="pokemon-card__name">
-    {{ pokemon.name }}
+  <div class="pokemon-card__name text-center my-2">
+    <h3>{{ pokemon.name }}</h3>
   </div>
-
-  <div class="pokemon-card__types">
-    <div class="pokemon-card__type" *ngFor="let type of pokemon.types"
-      [class]="'pokemon-card__type--' + type.toLowerCase()">
-      {{ type }}
+  <div class="pokemon-card__types d-flex">
+    <div class="pokemon-card__type d-flex align-items-center justify-content-center" *ngFor="let type of pokemon.types" [class]="'pokemon-card__type--' + type?.type?.name?.toLowerCase()">
+      <span>{{ type?.type?.name }}</span>
     </div>
   </div>
 </div>
